# citra

./: .gitmodules  .travis-deps.sh  .travis-upload.sh  .travis.descriptor.json.in  .travis.yml  CMakeLists.txt  appveyor.yml
src/android/app/: CMakeLists.txt  build.gradle
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/cpp/: config.h  (+5 more)
src/android/gradle/wrapper/: gradle-wrapper.properties
src/audio_core/: cubeb_input.cpp  cubeb_input.h  cubeb_sink.cpp
src/citra/: CMakeLists.txt  citra.cpp  citra.rc  config.cpp  default_ini.h
src/citra/emu_window/: emu_window_glfw.cpp  emu_window_glfw.h  emu_window_sdl2.cpp
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  config.cpp  configure.ui  configure_dialog.cpp  configure_general.cpp  configure_general.ui  game_list.cpp  game_list.h  game_list_p.h  gbuffer.cpp  gbuffer.h  main.cpp  main.h  main.ui  overlay.cpp  overlay.h  resources.qrc  stylus.cpp  stylus.h  ui_settings.h
src/citra_qt/configuration/: config.cpp  configure_audio.cpp  configure_audio.h  configure_dialog.cpp  configure_dialog.ui  configure_dialog_old.h  configure_general.cpp  configure_general.ui  configure_graphics.cpp  configure_graphics.ui  configure_input.cpp  configure_input.h  configure_input.ui  configure_input_widget.cpp
src/citra_qt/debugger/: console.cpp
src/citra_qt/multiplayer/: chat_room.h  host_room.cpp  host_room.h  message.cpp  state.cpp
src/citra_qt/themes/: themes.cpp  themes.h
src/citra_qt/updater/: admin_auth.h  admin_auth_mac.cpp  admin_auth_p.h  admin_auth_win.cpp  admin_auth_x11.cpp  updater.cpp  updater.h  updater_p.h
src/common/: CMakeLists.txt  bit_util.h  common_funcs.h  emu_window.cpp  emu_window.h  factory.h  file_util.cpp  file_util.h  linear_disk_cache.h  math_util.h  memory_util.cpp  memory_util.h  microprofile.h  scm_rev.cpp.in  scm_rev.h  screen.h  string_util.cpp  synchronized_wrapper.h  thread.cpp  thread.h  threadsafe_queue.h  timer.cpp
src/common/logging/: backend.cpp  backend.h  backend_spdlog.cpp  backend_spdlog.h  filter.cpp  filter.h  formatter.cpp  formatter.h  log.h  text_formatter.cpp
src/common/x64/: abi.h  cpu_detect.cpp
src/core/: CMakeLists.txt  cheat_core.cpp  core.cpp  core.h  core_timing.cpp  memory.cpp  memory.h  memory_setup.h  movie.cpp  settings.cpp  settings.h  system.cpp  system.h  telemetry_session.cpp
src/core/arm/: arm_interface.h  gdb_stub.cpp  gdb_stub.h
src/core/arm/asmjit/: jit_interface.cpp  jit_interface.h  jit_internal.h  jit_runtime.cpp  jit_runtime.h
src/core/arm/decoder/: arm.cpp  decoder.h  thumb.cpp
src/core/arm/disassembler/: arm_disasm.cpp  arm_disasm.h
src/core/arm/dynarmic/: arm_dynarmic.cpp
src/core/arm/dyncom/: arm_dyncom.cpp  arm_dyncom.h  arm_dyncom_interpreter.cpp  arm_dyncom_interpreter.h
src/core/arm/jit_x64/: common.h  cond.cpp  interface.cpp  interface.h  interpret.cpp  jit_x64.cpp  jit_x64.h  reg_alloc.cpp  reg_alloc.h
src/core/arm/jit_x64/instructions/: barrier.cpp  branch.cpp  coprocessor.cpp  data_processing.cpp  exception_generating.cpp  extension.cpp  hint.cpp  load_store.cpp  misc.cpp  multiply.cpp  packing.cpp  parallel_add_subtract_halving.cpp  parallel_add_subtract_modulo.cpp  parallel_add_subtract_saturating.cpp  qadd_qsub.cpp  reversal.cpp  saturation.cpp  status_register.cpp  synchronisation.cpp  thumb.cpp  usad.cpp
src/core/arm/jit_x64/instructions/helper/: load_store.cpp  load_store.h
src/core/arm/skyeye_common/: armstate.h
src/core/arm/skyeye_common/vfp/: vfp_helper.h  vfpdouble.cpp  vfpsingle.cpp
src/core/arm/unicorn/: interface.cpp  interface.h  unicorn_dynload.cpp  unicorn_dynload.h
src/core/file_sys/: cia_container.cpp  ncch_container.cpp  romfs_reader.cpp  title_metadata.cpp
src/core/frontend/: emu_window.cpp  emu_window.h  framebuffer.cpp  framebuffer.h  framebuffer_layout.cpp  framebuffer_layout.h  input.h
src/core/frontend/applet/: interface.h  swkbd.cpp  swkbd.h
src/core/gdbstub/: gdbstub.cpp
src/core/hle/applets/: swkbd.h
src/core/hle/kernel/: process.cpp
src/core/hle/service/: err_f.cpp  http_c.cpp  mic_u.cpp  mic_u.h  service.cpp
src/core/hle/service/apt/: apt.cpp
src/core/hle/service/cfg/: cfg.cpp
src/core/hle/service/fs/: fs_user.cpp
src/core/hle/service/hid/: hid.cpp
src/core/hle/service/http/: http.cpp  http.h  http_c.cpp  http_c.h
src/core/hle/service/ir/: extra_hid.cpp  ir_rst.cpp
src/core/hle/service/nwm/: nwm_uds.cpp  uds_beacon.cpp  uds_data.cpp
src/core/hw/aes/: ccm.cpp
src/core/loader/: loader.cpp  loader.h  ncch.cpp  ncch.h
src/input_common/: CMakeLists.txt  analog_from_button.cpp  analog_from_button.h  keyboard.h  main.cpp  main.h  motion_emu.h
src/input_common/sdl/: sdl.cpp  sdl.h  sdl_new.cpp  sdl_new.h
src/network/: CMakeLists.txt  client_server_common.h  network.cpp  packet.cpp  packet.h  room.cpp  room.h  room_member.cpp  room_member.h
src/tests/: CMakeLists.txt  asio.cpp  cpr.cpp
src/tests/core/arm/jit_x64/: fuzz_arm_branch.cpp  fuzz_arm_common.cpp  fuzz_arm_common.h  fuzz_arm_data_processing.cpp  fuzz_arm_load_store.cpp  fuzz_thumb.cpp  rand_int.h
src/updater/: CMakeLists.txt  updater.cpp
src/video_core/: CMakeLists.txt  command_processor.cpp  frame_dumper.cpp  pica_state.h  rasterizer_interface.h  regs_pipeline.h  renderer_base.cpp  renderer_base.h  swrasterizer.h  vertex_loader.cpp  vertex_loader.h  vertex_loader_base.h  video_core.cpp  video_core.h
src/video_core/debug_utils/: debug_utils.cpp  debug_utils.h
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_rasterizer.h  gl_rasterizer_cache.cpp  gl_resource_manager.h  gl_shader_decompiler.cpp  gl_shader_decompiler.h  gl_shader_gen.cpp  gl_shader_gen.h  gl_shader_manager.cpp  gl_shader_manager.h  gl_shader_util.cpp  gl_state.cpp  gl_stream_buffer.cpp  gl_stream_buffer.h  pica_to_gl.h  renderer_opengl.cpp  renderer_opengl.h
src/video_core/renderer_vulkan/: renderer_vulkan.cpp  renderer_vulkan.h  vk_rasterizer.cpp  vk_rasterizer.h
src/video_core/shader/: shader_interpreter.cpp  shader_jit_x64_compiler.cpp
src/video_core/swrasterizer/: rasterizer.cpp
(+4 files in other folders)
